public/css/landing/style.css
.body {
  font-family: var(--font-family-primary);
}

.header {
  display: flex;
  justify-content: center;
  background: var(--header-background);
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  /* TODO: remove z-index and fix natively */
  z-index: 100;
}

/* Navigation section start */
.navigation__logo {
  width: 242px;
  margin-right: auto;
  padding: 14px 0;
}

.navigation__logo svg {
  width: 100%;
  height: 100%;
}

.navigation {
  align-items: center;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1400px;
}

.navigation-list {
  align-items: center;
  display: flex;
  gap: 52px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.navigation-link {
  color: var(--header-text-color);
  font-size: initial;
  font-weight: 600;
  line-height: var(--line-height-19);
  text-decoration: none;
}

.navigation-link:hover {
  text-decoration: underline;
  text-underline-offset: 4px;
}

.navigation-list>li>a svg {
  width: 30px;
  height: 100%;
  fill: var(--background-color);
}

.navigation-list:last-child {
  gap: 32px;
  padding-left: 52px;
}

.navigation-list>li button {
  font-weight: 700;
  font-size: var(--font-size-h7);
  line-height: var(--line-height-h7-xs);
  color: var(--text-color-light);
  background: transparent;
  border: unset;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 11px;
}

.navigation-list .release-button-action {
  position: relative;
}

.navigation-list>li [role="menu"] {
  display: none;
  position: absolute;
  margin: 0;
  background: var(--dropdown-background-color);
  box-shadow: 3px 4px 7px 1px var(--dropdown-box-shadow-color);
  border-radius: 10px;
  padding: 21px 25px;
  width: max-content;
  left: -90px;
  top: 45px;
}

.navigation-list>li [role="menu"] li:not(:last-child) {
  margin-bottom: 16px;
}

.navigation-list>li>ul [role="menuitem"] {
  display: block;
  border-radius: 5px;
}

.navigation-list>li>ul [role="menuitem"] a {
  font-weight: 600;
  font-size: initial;
  /* TODO: replace with var */
  line-height: calc(19/16);
  color: var(--text-color);
  text-decoration: none;
}

.navigation-list>li>ul [role="menuitem"] a:hover {
  text-decoration: underline;
}

#docsearch>svg {
  width: 24px;
  height: 24px;
  stroke-width: 1.6;
  color: var(--background-color);
  cursor: pointer;
}

#docsearch .DocSearch-Button-Placeholder {
  display: none;
}

#docsearch .DocSearch-Button-Keys {
  display: none;
}

#docsearch button {
  background: unset;
  border-radius: unset;
  margin: unset;
  padding: unset;
}

#docsearch button span.DocSearch-Button-Container {
  width: 24px;
  height: 24px;
}

#docsearch button .DocSearch-Button-Container>svg {
  --docsearch-text-color: var(--background-color);
  width: 100%;
  height: 100%;
}

#docsearch>button:hover {
  box-shadow: unset;
}

/* Navigation section end */

/* Hero Section start */
.hero {
  display: flex;
  flex-direction: column;
  padding-top: 86px;
}

.hero__content {
  margin-left: auto;
  margin-right: auto;
  max-width: 80rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.hero__heading {
  color: var(--text-color);
  font-size: var(--font-size-h1);
  font-weight: 900;
  letter-spacing: 0.03em;
  line-height: var(--line-height-h1);
  text-align: center;
}

.hero__heading--highlight {
  color: var(--text-color-accent);
}

.hero__sub-heading {
  color: var(--subtitle-text-color);
  font-size: var(--font-size-h6);
  font-weight: 400;
  line-height: var(--line-height-h6);
  margin: auto;
  max-width: 55rem;
  text-align: center;
}

.hero__action {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
  justify-content: center;
  margin-bottom: 42px;
  margin-top: 48px;
}

.hero__action-copy-command {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  background: var(--background-color);
  border-radius: 3px;
  border: 2px solid var(--button-border-color);
  box-shadow: 2px 4px 10px var(--box-shadow-color);
  display: flex;
  padding: 16px 210px 16px 19px;
  position: relative;
}

.hero__action-copy-command-text {
  color: var(--text-color);
  font-family: var(--font-family-code);
  font-size: var(--font-size-h7-mega);
  font-weight: 400;
  line-height: var(--line-height-h7-mega);
}

.hero__action-copy-command-text::before {
  color: var(--text-color-accent);
  content: '$';
  font-size: inherit;
  font-weight: 700;
  line-height: inherit;
  padding-right: 16px;
  vertical-align: text-bottom;
}

.hero__action-copy-command-button {
  background: var(--button-background-color-dark);
  border-radius: 6px;
  border: 1px solid var(--button-border-color-dark);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color-light);
  font-family: var(--font-family-code);
  font-size: var(--font-size-h7);
  font-weight: 600;
  line-height: var(--line-height-h7);
  padding: 12px 0;
  position: absolute;
  right: -6px;
  top: -2px;
  width: 100%;
  max-width: 145px;
}

.hero__action-copy-command-button:hover {
  background: var(--button-background-color-light);
  border: 1px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color);
  cursor: pointer;
  transition: 0.3s ease-in-out;
  will-change: background, color, border, box-shadow;
}

.hero__action-button--get-started {
  background: var(--button-background-color-light);
  border-radius: 6px;
  border: 1px solid var(--button-border-color-dark);
  box-shadow: inset 0 -4px 0 var(--button-box-shadow);
  color: var(--text-color);
  font-family: var(--font-family-code);
  font-feature-settings: 'salt'on;
  font-size: var(--font-size-h7);
  font-weight: 600;
  line-height: var(--line-height-h7);
  padding: 12px 20px;
  text-decoration: none;
}
/* ... */

